Fix degree and date for student records in index.html
Corrected degree and updated date for existing records.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ const knownDiplomas = {
     name: 'Adriano Almeida Laranjeira',
     degree: 'Licenciatura em Pedagogia',
     inst: 'Universidade Anhanguera',
-    date: 'Conclusão em 05/01/2026',   // 🔄 data corrigida
+    date: 'Conclusão em 05/01/2026',
     status: 'Ativo',
     diploma: '1350634-22'
   },
@@ -220,9 +220,10 @@ const knownDiplomas = {
     diploma: '865895-23'
   },
 
-  '363456-98': {   // 🆕 NOVO REGISTRO
+  /* 🔄 REGISTRO CORRIGIDO */
+  '363456-98': {
     name: 'José Carlos de Araújo',
-    degree: 'Licenciatura em Administração',
+    degree: 'Bacharel em Administração',
     inst: 'Universidade Anhanguera',
     date: 'Conclusão em 14/08/2025',
     status: 'Ativo',
