Remove comments and add new record in index.html

--- a/index.html
+++ b/index.html
@@ -200,8 +200,6 @@ const knownDiplomas = {
     diploma: '2454446671-22'
   },
 
-  /* ===== REGISTROS ATUALIZADOS ===== */
-
   '1350634-22': {
     name: 'Adriano Almeida Laranjeira',
     degree: 'Licenciatura em Pedagogia',
@@ -220,7 +218,6 @@ const knownDiplomas = {
     diploma: '865895-23'
   },
 
-  /* 🔄 REGISTRO CORRIGIDO */
   '363456-98': {
     name: 'José Carlos de Araújo',
     degree: 'Bacharel em Administração',
@@ -228,6 +225,16 @@ const knownDiplomas = {
     date: 'Conclusão em 14/08/2025',
     status: 'Ativo',
     diploma: '363456-98'
+  },
+
+  /* ✅ NOVO REGISTRO ADICIONADO */
+  '343386-23': {
+    name: 'Ana Caroline De Camargo',
+    degree: 'Licenciatura em Pedagogia',
+    inst: 'Universidade Pitágoras Unopar Anhanguera',
+    date: 'Conclusão em 26/03/2025',
+    status: 'Ativo',
+    diploma: '343386-23'
   }
 };
 
