Add new student records to index.html

--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@ const knownDiplomas = {
     status: 'Ativo',
     diploma: '2454446671-22'
   },
-
   '1350634-22': {
     name: 'Adriano Almeida Laranjeira',
     degree: 'Licenciatura em Pedagogia',
@@ -208,7 +207,6 @@ const knownDiplomas = {
     status: 'Ativo',
     diploma: '1350634-22'
   },
-
   '865895-23': {
     name: 'Valmisson Silva Santos',
     degree: 'Licenciatura em Educação Física',
@@ -217,7 +215,6 @@ const knownDiplomas = {
     status: 'Ativo',
     diploma: '865895-23'
   },
-
   '363456-98': {
     name: 'José Carlos de Araújo',
     degree: 'Bacharel em Administração',
@@ -226,8 +223,6 @@ const knownDiplomas = {
     status: 'Ativo',
     diploma: '363456-98'
   },
-
-  /* ✅ NOVO REGISTRO ADICIONADO */
   '343386-23': {
     name: 'Ana Caroline De Camargo',
     degree: 'Licenciatura em Pedagogia',
@@ -235,6 +230,16 @@ const knownDiplomas = {
     date: 'Conclusão em 26/03/2025',
     status: 'Ativo',
     diploma: '343386-23'
+  },
+
+  /* ✅ NOVO REGISTRO */
+  '366456-87': {
+    name: 'Jonathan Zamberlan',
+    degree: 'Bacharel em Medicina Veterinária',
+    inst: 'Faculdade Anhanguera de Macapá',
+    date: 'Conclusão em 10/01/2025',
+    status: 'Ativo',
+    diploma: '366456-87'
   }
 };
 
