--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ const knownDiplomas = {
     diploma: '343386-23'
   },
 
-  /* ✅ NOVO REGISTRO */
+  /* NOVO REGISTRO */
   '366456-87': {
     name: 'Jonathan Zamberlan',
     degree: 'Bacharel em Medicina Veterinária',
@@ -240,6 +240,16 @@ const knownDiplomas = {
     date: 'Conclusão em 10/01/2025',
     status: 'Ativo',
     diploma: '366456-87'
+  },
+
+  /* ✅ REGISTRO ADICIONADO */
+  '2653356-98': {
+    name: 'Stela Maris Alves de Lima Ribeiro',
+    degree: 'Pós-Graduação em Gestão Educacional',
+    inst: 'Universidade Anhanguera',
+    date: 'Conclusão em 04/06/2022',
+    status: 'Ativo',
+    diploma: '2653356-98'
   }
 };
 
