--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <div id="degree">—</div>
     <div id="inst">—</div>
     <div id="date">—</div>
+
     <div style="margin-top:14px">
       <span class="label" id="status">—</span>
     </div>
@@ -231,8 +232,6 @@ const knownDiplomas = {
     status: 'Ativo',
     diploma: '343386-23'
   },
-
-  /* NOVO REGISTRO */
   '366456-87': {
     name: 'Jonathan Zamberlan',
     degree: 'Bacharel em Medicina Veterinária',
@@ -241,8 +240,6 @@ const knownDiplomas = {
     status: 'Ativo',
     diploma: '366456-87'
   },
-
-  /* ✅ REGISTRO ADICIONADO */
   '2653356-98': {
     name: 'Stela Maris Alves de Lima Ribeiro',
     degree: 'Pós-Graduação em Gestão Educacional',
@@ -250,6 +247,15 @@ const knownDiplomas = {
     date: 'Conclusão em 04/06/2022',
     status: 'Ativo',
     diploma: '2653356-98'
+  },
+  /* ✅ NOVO REGISTRO */
+  '2567386-78': {
+    name: 'Maylane Amorim Costa',
+    degree: 'Pós-Graduação em Gestão Educacional',
+    inst: 'Universidade Anhanguera',
+    date: 'Conclusão em 14/12/2021',
+    status: 'Ativo',
+    diploma: '2567386-78'
   }
 };
 
