--- a/index.html
+++ b/index.html
@@ -197,6 +197,14 @@ const knownDiplomas = {
     date: 'Conclusão em 13/12/2025',
     status: 'Ativo',
     diploma: '24578-23'
+  },
+  '365455-77': {
+    name: 'Cláudia Andréa da Paixão Miranda',
+    degree: 'Especialização Técnica em Enfermagem do Trabalho',
+    inst: 'Universidade Anhanguera',
+    date: 'Conclusão em 12/12/2025',
+    status: 'Ativo',
+    diploma: '365455-77'
   }
 };
 
