Add new user data for Edna Rosa da Silva

--- a/index.html
+++ b/index.html
@@ -205,6 +205,14 @@ const knownDiplomas = {
     date: 'Conclusão em 12/12/2025',
     status: 'Ativo',
     diploma: '365455-77'
+  },
+  '2677537-88': {
+    name: 'Edna Rosa da Silva',
+    degree: 'Pós-Graduação em Geriatria e Gerontologia',
+    inst: 'Universidade Anhanguera',
+    date: 'Conclusão em 04/09/2025',
+    status: 'Ativo',
+    diploma: '2677537-88'
   }
 };
 
