Add new education entry for Alessandra Cirne

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@ const knownDiplomas = {
     date: 'Conclusão em 04/09/2025',
     status: 'Ativo',
     diploma: '2677537-88'
+  },
+  '2566532-33': {
+    name: 'Alessandra Cirne do Nascimento Luggeri',
+    degree: 'Pós-Graduação em Privacidade de Dados e Segurança da Informação',
+    inst: 'Universidade Anhanguera',
+    date: 'Conclusão em 23/06/2024',
+    status: 'Ativo',
+    diploma: '2566532-33'
   }
 };
 
