Add new graduate information for Juliana Benevides

--- a/index.html
+++ b/index.html
@@ -221,6 +221,15 @@ const knownDiplomas = {
     date: 'Conclusão em 23/06/2024',
     status: 'Ativo',
     diploma: '2566532-33'
+  },
+  // NOVO: Juliana Benevides Aires de Castro
+  '4777764-87': {
+    name: 'Juliana Benevides Aires de Castro',
+    degree: 'Pós-Graduação em Terapia Familiar e de Casal',
+    inst: 'Universidade Anhanguera',
+    date: 'Conclusão em 13/06/2020',
+    status: 'Ativo',
+    diploma: '4777764-87'
   }
 };
 
